# sweet-works

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: user_settings.json
bench/: __init__.py  __main__.py
src/: __init__.py
src/assets/: generator.py  loader.py  paths.py
src/audio/: __init__.py  sfx.py
src/belts/: belt.py  belt_network.py  belt_renderer.py  chain.py  network_soa.py  topology.py
src/buildings/: assembler.py  building.py  miner.py  port.py  registry.py
src/core/: clock.py  config.py  events.py  game.py  input.py  perf.py  settings.py
src/design/: easing.py  palette.py  theme.py  typography.py
src/items/: item.py  item_type.py  pool.py  registry.py
src/rendering/: animation.py  chunk_renderer.py  cull.py  layers.py  pixel.py  pool.py  renderer.py  sprite_cache.py
src/research/: __init__.py  info.py  node.py  state.py  tree.py
src/scenes/: benchmark_scene.py  menu_scene.py  play_scene.py  research_scene.py  scene.py  settings_scene.py
src/stats/: __init__.py  catalog.py  objectives.py  tracker.py
src/ui/: controls.py  cursor.py  drag_pan.py  hover_highlight.py  hud.py  info.py  objectives_window.py  perf_hud.py  placement_fx.py  research_menu.py  research_tooltip.py  sprite_studio.py  structure_diagram.py  structure_menu.py  toolbar.py  tooltip.py  widget.py  zoom_controls.py
src/world/: camera.py  direction.py  (+3 more)
tests/: conftest.py  test_belt_sim.py  test_direction_transforms.py  test_info.py  test_objectives.py  test_objectives_window_smoke.py  test_research_state.py  test_stats_tracker.py  test_structure_menu_layout.py  test_topology.py
tools/: __init__.py  make_icon.py
(+10 files in other folders)
